// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <p
    className="spacer-bottom"
  >
    hotspots.no_associated_lines
  </p>
  <withCurrentUserContext(HotspotSnippetHeader)
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    hotspot={
      Object {
        "assignee": "assignee",
        "assigneeUser": Object {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": Object {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": Array [],
        "comment": Array [],
        "component": Object {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": Array [
          Object {
            "locations": Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": Object {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": Object {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": Object {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": Array [
          Object {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          Object {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
  />
  <div
    className="hotspot-snippet-container bordered"
  >
    <DeferredSpinner
      className="big-spacer"
      loading={false}
    />
  </div>
</Fragment>
`;

exports[`should render correctly when secondary location is selected: with selected hotspot location 1`] = `
<Fragment>
  <p
    className="spacer-bottom"
  >
    hotspots.no_associated_lines
  </p>
  <withCurrentUserContext(HotspotSnippetHeader)
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    hotspot={
      Object {
        "assignee": "assignee",
        "assigneeUser": Object {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": Object {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": Array [],
        "comment": Array [],
        "component": Object {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": Array [
          Object {
            "locations": Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": Object {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": Object {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": Object {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": Array [
          Object {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          Object {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
  />
  <div
    className="hotspot-snippet-container bordered"
  >
    <DeferredSpinner
      className="big-spacer"
      loading={false}
    />
  </div>
</Fragment>
`;

exports[`should render correctly: with sourcelines 1`] = `
<Fragment>
  <withCurrentUserContext(HotspotSnippetHeader)
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    hotspot={
      Object {
        "assignee": "assignee",
        "assigneeUser": Object {
          "active": true,
          "local": true,
          "login": "assignee",
          "name": "John Doe",
        },
        "author": "author",
        "authorUser": Object {
          "active": true,
          "local": true,
          "login": "author",
          "name": "John Doe",
        },
        "canChangeStatus": true,
        "changelog": Array [],
        "comment": Array [],
        "component": Object {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "FIL",
        },
        "creationDate": "2013-05-13T17:55:41+0200",
        "flows": Array [
          Object {
            "locations": Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          },
        ],
        "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
        "line": 142,
        "message": "'3' is a magic number.",
        "project": Object {
          "key": "hotspot-component",
          "longName": "Hotspot component long name",
          "name": "Hotspot Component",
          "path": "path/to/component",
          "qualifier": "TRK",
        },
        "resolution": "FIXED",
        "rule": Object {
          "key": "squid:S2077",
          "name": "That rule",
          "securityCategory": "sql-injection",
          "vulnerabilityProbability": "HIGH",
        },
        "status": "REVIEWED",
        "textRange": Object {
          "endLine": 142,
          "endOffset": 83,
          "startLine": 142,
          "startOffset": 26,
        },
        "updateDate": "2013-05-13T17:55:42+0200",
        "users": Array [
          Object {
            "active": true,
            "local": true,
            "login": "assignee",
            "name": "John Doe",
          },
          Object {
            "active": true,
            "local": true,
            "login": "author",
            "name": "John Doe",
          },
        ],
      }
    }
  />
  <div
    className="hotspot-snippet-container bordered"
  >
    <DeferredSpinner
      className="big-spacer"
      loading={false}
    >
      <SnippetViewer
        component={
          Object {
            "canMarkAsFavorite": true,
            "fav": false,
            "key": "project:foo/bar.ts",
            "longName": "foo/bar.ts",
            "measures": Object {
              "coverage": "85.2",
              "duplicationDensity": "1.0",
              "issues": "12",
              "lines": "56",
            },
            "name": "foo/bar.ts",
            "path": "foo/bar.ts",
            "project": "project",
            "projectName": "MyProject",
            "q": "FIL",
            "uuid": "foo-bar",
          }
        }
        displayLineNumberOptions={false}
        displaySCM={false}
        expandBlock={[Function]}
        handleSymbolClick={[MockFunction]}
        highlightedSymbols={Array []}
        index={0}
        issue={
          Object {
            "assignee": "assignee",
            "assigneeUser": Object {
              "active": true,
              "local": true,
              "login": "assignee",
              "name": "John Doe",
            },
            "author": "author",
            "authorUser": Object {
              "active": true,
              "local": true,
              "login": "author",
              "name": "John Doe",
            },
            "canChangeStatus": true,
            "changelog": Array [],
            "comment": Array [],
            "component": Object {
              "key": "hotspot-component",
              "longName": "Hotspot component long name",
              "name": "Hotspot Component",
              "path": "path/to/component",
              "qualifier": "FIL",
            },
            "creationDate": "2013-05-13T17:55:41+0200",
            "flows": Array [
              Object {
                "locations": Array [
                  Object {
                    "component": "main.js",
                    "textRange": Object {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
              },
            ],
            "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
            "line": 142,
            "message": "'3' is a magic number.",
            "project": Object {
              "key": "hotspot-component",
              "longName": "Hotspot component long name",
              "name": "Hotspot Component",
              "path": "path/to/component",
              "qualifier": "TRK",
            },
            "resolution": "FIXED",
            "rule": Object {
              "key": "squid:S2077",
              "name": "That rule",
              "securityCategory": "sql-injection",
              "vulnerabilityProbability": "HIGH",
            },
            "status": "REVIEWED",
            "textRange": Object {
              "endLine": 142,
              "endOffset": 83,
              "startLine": 142,
              "startOffset": 26,
            },
            "updateDate": "2013-05-13T17:55:42+0200",
            "users": Array [
              Object {
                "active": true,
                "local": true,
                "login": "assignee",
                "name": "John Doe",
              },
              Object {
                "active": true,
                "local": true,
                "login": "author",
                "name": "John Doe",
              },
            ],
          }
        }
        lastSnippetOfLastGroup={false}
        locations={Array []}
        locationsByLine={Object {}}
        onLocationSelect={[MockFunction]}
        renderAdditionalChildInLine={[Function]}
        renderDuplicationPopup={[Function]}
        scroll={[Function]}
        snippet={
          Array [
            Object {
              "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
              "coverageStatus": "covered",
              "coveredConditions": 2,
              "duplicated": false,
              "isNew": true,
              "line": 16,
              "scmAuthor": "simon.brandhof@sonarsource.com",
              "scmDate": "2018-12-11T10:48:39+0100",
              "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
            },
          ]
        }
      />
    </DeferredSpinner>
  </div>
</Fragment>
`;
